css/common.css
html,body {
  font-family: Helvetica,Arial,sans-serif;
  background: #000;
  font-size:16px;
}

body {
  padding-top: 20px;
  padding-bottom: 20px
}

.default-body {
  padding-top: 70px;
}

#candidate {
  padding-top: 90px;
}

/* START HEADER */
.navbar-toggle .icon-bar {
  background-color: #000
}
.navbar-brand {
  background: transparent url('/images/mayday-pac-logo.png') no-repeat 0 0;
  background-size: cover;
  width: 272px;
  height: 87px;
  position: absolute;
  z-index: 10000;
}
.navbar-social {
  z-index: 100;
  position: fixed;
  right: 15px
}
.navbar-social .navbar-nav>li>a {
  padding-top: 0px;
  padding-bottom: 0px;
}
.navbar-social a.social {
  width: 106px;
  height: 26px;
  background-position: 0 -10px;
}
.navbar-social a.social.facebook-share {
  background-image: url('/images/share-facebook.png')
}
.navbar-social a.social.twitter-share {
  background-image: url('/images/share-twitter.png')
}
.navbar-social a.social.email-share {
  background-image: url('/images/share-email.png')
}
.navbar-primary {
  padding-left: 272px;
  position: absolute;
  z-index: 100;
  top: 26px;
  width: 100%;
}
.navbar-primary .navbar-nav>li>a {
  padding: 13px 15px ;
  text-transform: uppercase;
  color: #444;
  font-weight: 400;
  letter-spacing:90%;
  height: 45px;
}

.navbar-toggle .menu-text {
  text-transform: uppercase;
  color: #444;
  font-weight: 700;
  letter-spacing:90%
}
.navbar-primary .in .navbar-nav>li {
  background-color: rgba(255,255,255,0.8);
}
.navbar-primary .navbar-nav>li>a small {
  vertical-align: top
}
.dropdown-menu {
  border: 0;
  border-radius: 0;
  margin: 0;
}
.dropdown-menu>li>a {
  padding: 10px 20px;
}
.dropdown-menu>li>a:before {
  content: '» ';
}
.header-bg-1, .header-bg-2 {
  position: absolute;
  z-index: 1;
  width: 100%;
}
.header-bg-1 {
  background: #000;
  height: 26px;
  top: 0
}
.header-bg-2 {
  background: rgba(255,255,255,0.9);
  height: 45px;
  top: 26px
}


/* ## type ## */

.navbar-primary a {
  font-family:'Roboto', Helvetica;
  font-weight:100;
}

.navbar-nav a {
  font-family:'Roboto', sans-serif;
  font-weight:100;
  letter-spacing: .1em;
}

.navbar-primary .navbar-nav>li>a small /* header downward V */{
  padding-left:5px;
  border-right: solid 1px #333;
  padding-right:20px ;
}

/* ## header ## */
.header-bg-2 {
  border-bottom:solid 1px #cccccc;
}

/* END HEADER */



/* FOOTER SECTION */
footer {
  color: #999;
  background-color:black;
}
.donate-wrap {
  background: #444;
  text-align: center;
  padding: 5px 0;
  margin: 0 0 20px;
}
.donate-wrap hr {
  border-color: #666;
}
.donate-wrap .container {
  padding-top: 20px;
  padding-bottom: 20px
}
.donate-wrap a {
  color: #fff;
  font-weight: 700;
  text-transform: uppercase;
}
.donate-wrap a.ir {
  background: transparent url('/images/btn-donate.png') center center no-repeat;
  width: 289px;
  height: 47px;
  display: block;
  margin: 0 auto;
}
.social-link {
  float: right;
  width: 55px;
  height: 54px;
  background: transparent 0 0 no-repeat;
  margin-left: 10px;
}
.social-link.facebook {
  background-image: url('/images/link-facebook.png');
}
.social-link.twitter {
  background-image: url('/images/link-twitter.png');
}
/* END FOOTER SECTION */

.safeharbor {
  font: normal 1em/1.4 'Merriweather', Georgia, "Times New Roman", Times, serif;
  display: inline-block;
  color: white;
  text-align: center;
  font-size: 16px;
  padding: 10px 10px 0 10px;
  border: 2px solid white;
  font-variant: small-caps;
  margin-bottom:10px;
}

.ir/* Image replacement: header social share, footer FB/Twitter */ {
  background-color: transparent;
  border: 0;
  overflow: hidden;
  text-indent: -9999px
}
.text-red {
  color: #cc3333 !important;
}

/* Darius CSS */
.fa.fa-caret-down {
	padding-right:20px;
	padding-left:10px;
  border-right:solid 1px #000;	
}

.nav>li>a:hover i{
	border:none;
}

/* COLLAPSE THE MENU EARLY */
@media (max-width: 1200px) {
  .navbar-primary .navbar-header {
      float: none;
  }
  .navbar-primary .navbar-left,  .navbar-primary .navbar-right {
      float: none !important;
  }
  .navbar-primary .navbar-toggle {
      display: block;
  }
  .navbar-primary .navbar-collapse {
    border-top: 1px solid transparent;
    box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
  }
  .navbar-primary .navbar-fixed-top {
    top: 0;
    border-width: 0 0 1px;
  }
  .navbar-primary .navbar-collapse.collapse {
    display: none!important;
  }
  .navbar-primary .navbar-nav {
    float: none!important;
    margin-top: 7.5px;
  }
  .navbar-primary .navbar-nav>li {
      float: none;
  }
  .navbar-primary .navbar-nav>li>a {
      padding-top: 10px;
      padding-bottom: 10px;
  }
  .navbar-primary .collapse.in{
    display:block !important;
  }
}

/* For iPad and smaller screens */
@media (max-width: 768px) {
  .navbar-primary {
    padding-left:200px;
  }
}

/* For iPhone and smaller screens */
@media (max-width: 320px) {
    .navbar-primary {
      padding-left:100px;
    }
    .navbar-brand {
      width: 222px;
      height: 70px;
      top:10px;
    }
}

